add locus application and rebar3 lock

--- a/rebar.config
+++ b/rebar.config
@@ -1,9 +1,8 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
+{deps, [{locus, {git, "https://github.com/g-andrade/locus.git"}}]}.
 
 {relx, [{release, {snitch, "0.1.0"},
-         [snitch,
-          sasl]},
+         [snitch]},
 
         {sys_config, "./config/sys.config"},
         {vm_args, "./config/vm.args"},
