--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,6 @@
 {erl_opts, [debug_info]}.
-{deps, [{locus, {git, "https://github.com/g-andrade/locus.git"}}]}.
+{deps, [{locus, {git, "https://github.com/g-andrade/locus.git"}},
+        {cidr,  {git, "https://github.com/benoitc/inet_cidr.git"}}]}.
 
 {relx, [{release, {snitch, "0.1.0"},
          [snitch]},
