--- a/apps/banker/rebar.config
+++ b/apps/banker/rebar.config
@@ -1,5 +1,5 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
+{deps, [{epgsql, {git, "https://github.com/epgsql/epgsql.git", {tag, "4.6.0"}}}]}.
 
 {shell, [
   % {config, "config/sys.config"},
