--- a/rebar.config
+++ b/rebar.config
@@ -14,7 +14,7 @@
         %% is required if the names aren't exactly
         %% sys.config and vm.args
         {sys_config, "./config/sys.config"},
-        {vm_args, "./config/vm.args"}
+        {vm_args   , "./config/vm.args"}
 
         %% the .src form of the configuration files do
         %% not require setting RELX_REPLACE_OS_VARS
@@ -22,13 +22,8 @@
         %% {vm_args_src, "./config/vm.args.src"}
 ]}.
 
-{profiles, [{prod, [{relx,
-                     [%% prod is the default mode when prod
-                      %% profile is used, so does not have
-                      %% to be explicitly included like this
-                      {mode, prod}
-
-                      %% use minimal mode to exclude ERTS
-                      %% {mode, minimal}
-                     ]
-            }]}]}.
+{profiles, [{prod, [{relx, [{dev_mode    , false},
+			    {include_erts, true},
+			    {include_src , false},
+			    {debug_info  , strip}]}]
+	    }]}.
