Move epgsql application dependency to banker

--- a/rebar.config
+++ b/rebar.config
@@ -3,9 +3,7 @@
 {deps, []}.
 
 {relx, [{release, {snitch, "0.1.0"},
-         [banker,
-          epgsql,
-          sasl]},
+         [banker, sasl]},
 
         {mode, dev},
 
