Fetch clock domains from banker, use clock for pinboard

--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,7 @@
 {deps, []}.
 
 {relx, [{release, {snitch, "0.1.0"},
-         [banker, pinboard, sasl]},
+         [banker, clock, pinboard, sasl]},
 
         {mode, dev},
 
