minor rebar.config cleanup

--- a/apps/banker/rebar.config
+++ b/apps/banker/rebar.config
@@ -1,7 +1,3 @@
 {erl_opts, [debug_info]}.
 {deps, [{epgsql, {git, "https://github.com/epgsql/epgsql.git", {tag, "4.7.1"}}}]}.
-
-{shell, [
-  % {config, "config/sys.config"},
-    {apps, [banker]}
-]}.
+{shell, [{apps, [banker]}]}.
