--- a/apps/clock/rebar.config
+++ b/apps/clock/rebar.config
@@ -1,7 +1,3 @@
 {erl_opts, [debug_info]}.
 {deps, []}.
-
-{shell, [
-  % {config, "config/sys.config"},
-         {apps, [clock]}
-        ]}.
+{shell, [{apps, [clock]}]}.
