--- a/apps/pinboard/rebar.config
+++ b/apps/pinboard/rebar.config
@@ -1,7 +1,3 @@
 {erl_opts, [debug_info]}.
 {deps, [{cowboy, {git, "https://github.com/ninenines/cowboy", {tag, "2.10.0"}}}]}.
-
-{shell, [
-  % {config, "config/sys.config"},
-         {apps, [pinboard]}
-        ]}.
+{shell, [{apps, [pinboard]}]}.
