--- a/apps/sheriff/rebar.config
+++ b/apps/sheriff/rebar.config
@@ -1,7 +1,3 @@
 {erl_opts, [debug_info]}.
 {deps, []}.
-
-{shell, [
-  % {config, "config/sys.config"},
-    {apps, [sheriff]}
-]}.
+{shell, [{apps, [sheriff]}]}.
