--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/azimut/snitch/snitch:latest
+          tags: ghcr.io/azimut/snitch:latest
