cleanup rebar.config

--- a/rebar.config
+++ b/rebar.config
@@ -1,27 +1,10 @@
 {erl_opts, [debug_info]}.
-
 {deps, []}.
 
-{relx, [{release, {snitch, "0.1.0"},
-         [banker, clock, pinboard, sasl]},
-
-        {mode, dev},
-
-        %% automatically picked up if the files
-        %% exist but can be set manually, which
-        %% is required if the names aren't exactly
-        %% sys.config and vm.args
-        {sys_config, "./config/sys.config"},
-        {vm_args   , "./config/vm.args"}
-
-        %% the .src form of the configuration files do
-        %% not require setting RELX_REPLACE_OS_VARS
-        %% {sys_config_src, "./config/sys.config.src"},
-        %% {vm_args_src, "./config/vm.args.src"}
-]}.
+{relx, [{release, {snitch, "0.1.0"}, [banker, clock, pinboard, sasl]},
+        {mode, dev}]}.
 
 {profiles, [{prod, [{relx, [{dev_mode    , false},
 			    {include_erts, true},
 			    {include_src , false},
-			    {debug_info  , strip}]}]
-	    }]}.
+			    {debug_info  , strip}]}]}]}.
