move database configuration to /config/sys.config

--- a/rebar.config
+++ b/rebar.config
@@ -2,6 +2,8 @@
 {deps, []}.
 
 {relx, [{release, {snitch, "0.1.0"}, [banker, clock, pinboard, sasl]},
+        {sys_config, "./config/sys.config"},
+        {vm_args   , "./config/vm.args"},
         {mode, dev}]}.
 
 {profiles, [{prod, [{relx, [{dev_mode    , false},
