--- a/config/sys.config
+++ b/config/sys.config
@@ -1,3 +1,6 @@
 [
-  {snitch, []}
+ {banker, [{db_config, #{host     => "127.0.0.1",
+                         username => "autoaim",
+                         password => "zaq12wsx",
+                         database => "binance"}}]}
 ].
