add "prod" profile sys.config template

--- a/rebar.config
+++ b/rebar.config
@@ -3,10 +3,12 @@
 
 {relx, [{release, {snitch, "0.1.0"}, [banker, clock, pinboard, sasl]},
         {sys_config, "./config/sys.config"},
-        {vm_args   , "./config/vm.args"},
+        {vm_args, "./config/vm.args"},
         {mode, dev}]}.
 
 {profiles, [{prod, [{relx, [{dev_mode    , false},
 			    {include_erts, true},
 			    {include_src , false},
-			    {debug_info  , strip}]}]}]}.
+			    {debug_info  , strip},
+                            {sys_config_src, "./config/prod.sys.config.src"}
+                           ]}]}]}.
