add cache to dockerfile

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,3 +39,5 @@ jobs:
         with:
           push: true
           tags: ghcr.io/azimut/snitch:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
