add PORT environment variable for cowboy listening port
seems needed for railway
https://docs.railway.app/deploy/exposing-your-app

--- a/config/sys.config
+++ b/config/sys.config
@@ -2,5 +2,6 @@
  {banker, [{db_config, #{host     => "127.0.0.1",
                          username => "autoaim",
                          password => "zaq12wsx",
-                         database => "binance"}}]}
+                         database => "binance"}}]},
+ {pinboard, [{port, 8081}]}
 ].
