--- a/rebar.config
+++ b/rebar.config
@@ -3,8 +3,8 @@
 
 {relx, [{release, {snitch, "0.1.0"}, [banker, clock, pinboard, sasl]},
         {sys_config, "./config/sys.config"},
-        {vm_args, "./config/vm.args"},
-        {mode, dev}]}.
+        {vm_args, "./config/vm.args"}
+       ]}.
 
 {profiles, [{prod, [{relx, [{dev_mode    , false},
 			    {include_erts, true},
