--- a/apps/banker/rebar.config
+++ b/apps/banker/rebar.config
@@ -1,3 +1,4 @@
 {erl_opts, [debug_info]}.
-{deps, [{epgsql, {git, "https://github.com/epgsql/epgsql.git", {tag, "4.7.1"}}}]}.
+{deps, [{epgsql, {git, "https://github.com/epgsql/epgsql.git", {tag, "4.7.1"}}},
+        {ecpool, {git, "https://github.com/emqx/ecpool.git", {branch, "v0.4.2"}}}]}.
 {shell, [{apps, [banker]}]}.
