--- a/config/sys.config
+++ b/config/sys.config
@@ -1,7 +1,11 @@
 [
- {banker, [{db_config, #{host     => "127.0.0.1",
-                         username => "autoaim",
-                         password => "zaq12wsx",
-                         database => "binance"}}]},
+ {banker, [{db_config, [{host    , "127.0.0.1"},
+                        {username, "autoaim"},
+                        {password, "zaq12wsx"},
+                        {database, "binance"},
+                        {port, 5432},
+                        {pool_size, 2},
+                        {pool_type, round_robin},
+                        {auto_reconnect, 3}]}]},
  {pinboard, [{port, 8081}]}
 ].
