more aggressive timeout/reconnect times

--- a/config/sys.config
+++ b/config/sys.config
@@ -3,9 +3,10 @@
                         {username, "autoaim"},
                         {password, "zaq12wsx"},
                         {database, "binance"},
+                        {timeout, 2000}, %% socket connection timeout
+                        {auto_reconnect, 1}, %% seconds to wait after a disconnection
                         {port, 5432},
                         {pool_size, 2},
-                        {pool_type, round_robin},
-                        {auto_reconnect, 3}]}]},
+                        {pool_type, round_robin}]}]},
  {pinboard, [{port, 8081}]}
 ].
