--- a/apps/pinboard/rebar.config
+++ b/apps/pinboard/rebar.config
@@ -1,3 +1,5 @@
 {erl_opts, [debug_info]}.
-{deps, [{cowboy, {git, "https://github.com/ninenines/cowboy", {tag, "2.10.0"}}}]}.
+{deps, [{cowboy, {git, "https://github.com/ninenines/cowboy", {tag, "2.10.0"}}}
+       ,{jsone, {git, "https://github.com/sile/jsone", {tag, "1.8.1"}}}
+       ]}.
 {shell, [{apps, [pinboard]}]}.
